--- a/public/canvas.html
+++ b/public/canvas.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-Version 0.0.5
 <html>
 <head>
     <title>canvas by Manvir</title>
@@ -23,33 +22,33 @@ Version 0.0.5
     <div class="button-group">
         <h3>Drawing Tools</h3>
         <div class="button-row">
-            <button class="drawing-button" data-command="lineTo(30,200)">Draw Line</button>
-            <button class="drawing-button" data-command="arc(95, 50, 40, 0, 2 * Math.PI)">Draw Circle</button>
-            <button class="drawing-button" data-command="quadraticCurveTo(100,220,240,110)">Draw Curve</button>
+            <button class="button" data-command="lineTo(30,200)">Draw Line</button>
+            <button class="button" data-command="arc(95, 50, 40, 0, 2 * Math.PI)">Draw Circle</button>
+            <button class="button" data-command="quadraticCurveTo(100,220,240,110)">Draw Curve</button>
         </div>
     </div>
 
     <div class="button-group">
         <h3>Text Tools</h3>
         <div class="button-row">
-            <button class="drawing-button" data-command="fillText('Hello World', 400, 100)">Add Text</button>
+            <button class="button" data-command="fillText('Hello World', 400, 100)">Add Text</button>
         </div>
     </div>
 
     <div class="button-group">
         <h3>Color Tools</h3>
         <div class="button-row">
-            <button class="color-button" data-command="createLinearGradient(100, 300, 200, 400)">Gradient Fill</button>
-            <button class="color-button" data-command="fillStyle = 'red'">Red Fill</button>
-            <button class="color-button" data-command="fillStyle = 'blue'">Blue Fill</button>
+            <button class="button" data-command="createLinearGradient(100, 300, 200, 400)">Gradient Fill</button>
+            <button class="button" data-command="fillStyle = 'red'">Red Fill</button>
+            <button class="button" data-command="fillStyle = 'blue'">Blue Fill</button>
         </div>
     </div>
 
     <div class="button-group">
         <h3>Clear Tools</h3>
         <div class="button-row">
-            <button class="clear-button" data-command="clearRect(20, 20, 50, 50)">Clear Square</button>
-            <button class="clear-button" data-command="clear">Clear All</button>
+            <button class="button" data-command="clearRect(20, 20, 50, 50)">Clear Square</button>
+            <button class="button" data-command="clear">Clear All</button>
         </div>
     </div>
 
