--- a/public/canvas.html
+++ b/public/canvas.html
@@ -67,6 +67,28 @@ myContext.fillStyle = 'blue';
 myContext.fill();
 }">
 
+   
+   <input type=button value="Draw House" onclick="{
+    myContext.beginPath();
+    myContext.lineWidth = 5;
+    myContext.strokeStyle = 'black';
+    myContext.rect(200, 200, 200, 200);
+    myContext.stroke();
+
+    myContext.beginPath();
+    myContext.moveTo(200, 200);
+    myContext.lineTo(300, 100);
+    myContext.lineTo(400, 200);
+    myContext.closePath();
+    myContext.stroke();
+
+    myContext.beginPath();
+    myContext.rect(250, 250, 50, 50);
+    myContext.stroke();
+}">
+
+   
+   
 
 <input type=button value=".createLinearGradient(100, 300, 200, 400)" onclick="{
    let myGradient = myContext.createLinearGradient(100, 300, 200, 400);
