--- a/public/canvas.html
+++ b/public/canvas.html
@@ -1,6 +1,6 @@
 
 <body style="background-color:powderblue;">
-<h2 align=center>t2a08-canvas by Fred</h2>
+<h2 align=center>Canvas by Manvir</h2>
 You use loops and variables to make fast fancy drawings <br><br>
 
 <input type=button value=".lineTo(30,200)" onclick="{
