--- a/public/storage.html
+++ b/public/storage.html
@@ -1,5 +1,5 @@
 
-<h2>t2a09-local-storage-name by Fred. Instructions:</h2>
+<h2>t2a09-local-storage-name by Manvir</h2>
 
 <body onload="{
    myStorage = localStorage.getItem('myStoredText')
@@ -24,3 +24,14 @@ Text example: <input id="myText1" type=text size=70 value="" placeholder="Write 
    document.getElementById('myText1').value = localStorage.getItem('myStoredText')
 }"> 
 <body style="background-color:powderblue;">
+
+   
+   <h2>Stored Text:</h2>
+<p id="storedText"></p>
+<script>
+   myStorage = localStorage.getItem('myStoredText');
+   if (myStorage != null) {
+      document.getElementById('myText1').value = myStorage;
+      document.getElementById('storedText').innerHTML = 'The following text is stored: ' + myStorage;
+   }
+</script>
