--- a/public/arrays.html
+++ b/public/arrays.html
@@ -1,14 +1,12 @@
-<h2 align="center">Arrays-by-Manvir.html</h2>
+h2 align="center">Arrays-by-Manvir.html</h2>
 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array" target="_blank">Good reference to Javascript Arrays</a><br>
 Arrays are stored numbered variables.
-
 <h4>Example Array code</h4>
 <pre>
 myArray = new Array()
 myArray[0] = 'Fred'
 myArray[1] = 'Mary'
 </pre>
-
 <h4>Example working Array code</h4>
 Max Array Entry: <input type="text" id="myText01" value="3"><br>
 <input type="button" value="Example onClick" onclick="{
@@ -18,11 +16,24 @@ Max Array Entry: <input type="text" id="myText01" value="3"><br>
   myArray[0] = 'Fred'
   myArray[1] = 'Mary'
   myArray[2] = 'Zizzy'
-  
-  for (let myLoop=0; myLoop<myTemp; myLoop++) {
-    mySum += 'Loop #:' + myLoop + ' array entry:' + myArray[myLoop] + '<br>'
-  }
-  document.getElementById('myDiv01').innerHTML = mySum
+for (let myLoop=0; myLoop<myTemp; myLoop++) {
+mySum += 'Loop #:' + myLoop + ' array entry:' + myArray[myLoop] + '<br>'
+}
+document.getElementById('myDiv01').innerHTML = mySum
+}"><br>
+
+Enter new array entry: <input type="text" id="newArrayEntry">
+<input type="button" value="Add Entry" onclick="{
+let myArray = new Array()
+let newArrayEntry = document.getElementById('newArrayEntry').value
+myArray.push(newArrayEntry)
+let myTemp = myArray.length
+let mySum = ''
+
+for (let myLoop=0; myLoop<myTemp; myLoop++) {
+mySum += 'Loop #:' + myLoop + ' array entry:' + myArray[myLoop] + '<br>'
+}
+document.getElementById('myDiv01').innerHTML = mySum
 }">
 
 <div id="myDiv01"></div>
