--- a/public/arrays.html
+++ b/public/arrays.html
@@ -3,6 +3,7 @@ h2 align="center">Arrays-by-Manvir.html</h2>
 Arrays are stored numbered variables.
 <h4>Example Array code</h4>
 <pre>
+Version 0.0.10
 myArray = new Array()
 myArray[0] = 'Fred'
 myArray[1] = 'Mary'
