--- a/public/arrays.html
+++ b/public/arrays.html
@@ -17,6 +17,15 @@ Max Array Entry: <input type="text" id="myText01" value="3"><br>
   myArray[0] = 'Fred'
   myArray[1] = 'Mary'
   myArray[2] = 'Zizzy'
+                                                      myArray[3] = 'Bob'
+                                                      myArray[4] = 'Joe'
+                                                      myArray[5] = 'Ermias'
+                                                      myArray[6] = 'Ellis'
+                                                      myArray[7] = 'Billy'
+                                                      myArray[8] = 'Sally'
+                                                      myArray[9] = 'Manvir'
+                                                      myArray[10] = 'Manny'
+                                                     
 for (let myLoop=0; myLoop<myTemp; myLoop++) {
 mySum += 'Loop #:' + myLoop + ' array entry:' + myArray[myLoop] + '<br>'
 }
