--- a/public/arrays.html
+++ b/public/arrays.html
@@ -1,9 +1,10 @@
-h2 align="center">Arrays-by-Manvir.html</h2>
+Version 0.0.10
+<h2 align="center">Arrays-by-Manvir.html</h2>
 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array" target="_blank">Good reference to Javascript Arrays</a><br>
 Arrays are stored numbered variables.
 <h4>Example Array code</h4>
 <pre>
-Version 0.0.10
+
 myArray = new Array()
 myArray[0] = 'Fred'
 myArray[1] = 'Mary'
