--- a/public/objects.html
+++ b/public/objects.html
@@ -1,33 +1,29 @@
-Version 0.0.1
-<h2 align-center>t2a02-objects-by-Fred.html</h2>
-<a href="">Good reference to Javascript Objects‹/a›‹br>
+<h2 align="center">t2a02-objects-by-Fred.html</h2>
+<a href="">Good reference to Javascript Objects</a><br>
 Objects are stored named variables
-<h4> Example Obiects code‹/h4> <pre›
+<h4> Example Objects code</h4>
+<pre>
 let myPerson = {
-"firstName": "John"
-"lastName"
-"Doe",
-"age": 50,
-"eyeColor": "blue"
-< pre>
-<h4> Example working Objects code‹/h4)
-Nothing: <input type-text id-"myTextel' value- "Useless at the moment"›<brs
-<input type-button value="Example Object Set and Show" onclick-"(
-let myPerson =
-'firstName*
-'lastName' age'
-'eyeColor'
-"John',
-"Doe ,
-50, 'blue'
+  "firstName": "John",
+  "lastName": "Doe",
+  "age": 50,
+  "eyeColor": "blue"
 }
-document. getElementById('myDive1*).innerHTML
-'‹bromyPerson Object has properties: <brst
-document. getElementById('myDiv01').innerHTML+=
-'firstMama:
-+ myPenson. firstName + <brs'
-document. getElementById('myDiv01*). innerHTML +=
-"You do the others <bry
-}">
-‹div id="myDiv01">. ..</div>
+</pre>
+<h4> Example working Objects code</h4>
+Nothing: <input type="text" id="myText01" value="Useless at the moment"><br>
+<input type="button" value="Example Object Set and Show" onclick="(
+  let myPerson = {
+    'firstName': 'John',
+    'lastName': 'Doe',
+    'age': 50,
+    'eyeColor': 'blue'
+  };
+  document.getElementById('myDiv01').innerHTML = '<br>myPerson Object has properties:<br>';
+  document.getElementById('myDiv01').innerHTML += 'firstName: ' + myPerson.firstName + '<br>';
+  document.getElementById('myDiv01').innerHTML += 'lastName: ' + myPerson.lastName + '<br>';
+  document.getElementById('myDiv01').innerHTML += 'age: ' + myPerson.age + '<br>';
+  document.getElementById('myDiv01').innerHTML += 'eyeColor: ' + myPerson.eyeColor + '<br>';
+)">
+<div id="myDiv01"></div>
 
