--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@ hi
   <li><a href="arrays.html">arrays.html</a>
   <li><a href="edge-impulse.html">edge-impulse.html</a>
   <li><a href="objects.html">objects.html</a>
-  <li><a href="..">...</a>
+  <li><a href="huggingface.html">huggingface.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
