--- a/public/huggingface.html
+++ b/public/huggingface.html
@@ -1,2 +1,2 @@
 
-<a href="https://hpssjellis.github.io/my-examples-of-huggingfacejs/public/hug09-08-text.html">hugging face</a>
+<h2><a href="https://hpssjellis.github.io/my-examples-of-huggingfacejs/public/hug09-08-text.html">hugging face</a></h2>
