--- a/public/translate.html
+++ b/public/translate.html
@@ -147,3 +147,19 @@
   </body>
 </html>
 
+     <br><br><br>
+     <script> let mySound1 = new Audio('Yeh.m4a') </script>
+ 
+
+
+<h1 align=center>T3A12-Sounds-and-events-name.html</h1>
+
+
+<input type=button value=sound onClick="{
+    mySound1.play()
+}">
+
+ <body style="background-color:powderblue;">
+
+  
+  <iframe width="110" height="200" src="https://www.myinstants.com/instant/vine-boom-sound-70972/embed/" frameborder="0" scrolling="no"></iframe>
