--- a/public/translate.html
+++ b/public/translate.html
@@ -152,7 +152,7 @@
  
 
 
-<h1 align=center>T3A12-Sounds-and-events-name.html</h1>
+<h1 align=center>Sounds and events Manvir.html</h1>
 
 
 <input type=button value=sound onClick="{
