--- a/public/translate.html
+++ b/public/translate.html
@@ -165,3 +165,9 @@
   <iframe width="110" height="200" src="https://www.myinstants.com/instant/vine-boom-sound-70972/embed/" frameborder="0" scrolling="no"></iframe>
      <br>
      <iframe width="110" height="200" src="https://www.myinstants.com/instant/i-woke-up-in-a-new-bugatti-43492/embed/" frameborder="0" scrolling="no"></iframe>
+     
+     
+     <audio controls>
+   <source src="vine-boom.mp3" type="audio/mpeg">
+</audio>
+
