--- a/public/translate.html
+++ b/public/translate.html
@@ -156,7 +156,7 @@
 
 
 <input type=button value=sound onClick="{
-    mySound1.play()
+    vine-boom.play()
 }">
 
  <body style="background-color:powderblue;">
