--- a/public/translate.html
+++ b/public/translate.html
@@ -12,7 +12,7 @@
     }
 </script>
 
-<h1 align=center>t2a10-translate-name</h1>
+<h1 align=center>translate</h1>
 
 <div id="google_translate_element">I really like javascript</div>
 
