--- a/public/translate.html
+++ b/public/translate.html
@@ -148,7 +148,7 @@
 </html>
 
      <br><br><br>
-     <script> let mySound1 = new Audio('Yeh.m4a') </script>
+     <script> let mySound1 = new Audio('vine-boom.mp3') </script>
  
 
 
@@ -170,4 +170,16 @@
      <audio controls>
    <source src="vine-boom.mp3" type="audio/mpeg">
 </audio>
+     <br><br><br><br
+                     
+                     <script> let mySound1 = new Audio('vine-boom.mp3') </script>
+ 
+
+
+<h1 align=center>T3A12-Sounds-and-events-name.html</h1>
+
+
+<input type=button value=sound onClick="{
+    mySound1.play()
+}">
 
