--- a/public/translate.html
+++ b/public/translate.html
@@ -176,10 +176,21 @@
  
 
 
-<h1 align=center>T3A12-Sounds-and-events-name.html</h1>
+
 
 
 <input type=button value=sound onClick="{
     mySound1.play()
 }">
+     
+     <br><br>
+<script> let mySound1 = new Audio('i-woke-up-in-a-new-bugatti.mp3') </script>
+ 
 
+
+
+
+
+<input type=button value=sound onClick="{
+    mySound1.play()
+}">
