--- a/public/translate.html
+++ b/public/translate.html
@@ -182,13 +182,15 @@
 }">
      
      <br><br>
-<script> let mySound1 = new Audio('i-woke-up-in-a-new-bugatti.mp3') </script>
+
+     
+     <script> let mySound2 = new Audio('i-woke-up-in-a-new-bugatti.mp3') </script>
  
 
 
-
+<h1 align=center>T3A12-Sounds-and-events-name.html</h1>
 
 
 <input type=button value=sound onClick="{
-    mySound1.play()
+    mySound2.play()
 }">
