--- a/public/objects.html
+++ b/public/objects.html
@@ -1,4 +1,4 @@
-<h2 align="center">t2a02-objects-by-Fred.html</h2>
+<h2 align="center">t2a02-objects-by-Manvir</h2>
 <a href="">Good reference to Javascript Objects</a><br>
 Objects are stored named variables
 <h4> Example Objects code</h4>
@@ -24,6 +24,6 @@ Nothing: <input type="text" id="myText01" value="Useless at the moment"><br>
   document.getElementById('myDiv01').innerHTML += 'lastName: ' + myPerson.lastName + '<br>';
   document.getElementById('myDiv01').innerHTML += 'age: ' + myPerson.age + '<br>';
   document.getElementById('myDiv01').innerHTML += 'eyeColor: ' + myPerson.eyeColor + '<br>';
-)">
+}">
 <div id="myDiv01"></div>
 
