--- a/public/objects.html
+++ b/public/objects.html
@@ -1,4 +1,4 @@
-<h2 align="center">t2a02-objects-by-Manvir</h2>
+<h2 align="center">objects-by-Manvir</h2>
 <a href="">Good reference to Javascript Objects</a><br>
 Objects are stored named variables
 <h4> Example Objects code</h4>
@@ -10,7 +10,11 @@ let myPerson = {
   "eyeColor": "blue"
 }
 </pre>
+
+
 <h4> Example working Objects code</h4>
+
+
 Nothing: <input type="text" id="myText01" value="Useless at the moment"><br>
 <input type="button" value="Example Object Set and Show" onclick="(
   let myPerson = {
@@ -18,12 +22,12 @@ Nothing: <input type="text" id="myText01" value="Useless at the moment"><br>
     'lastName': 'Doe',
     'age': 50,
     'eyeColor': 'blue'
-  }
+  };
   document.getElementById('myDiv01').innerHTML = '<br>myPerson Object has properties:<br>';
   document.getElementById('myDiv01').innerHTML += 'firstName: ' + myPerson.firstName + '<br>';
   document.getElementById('myDiv01').innerHTML += 'lastName: ' + myPerson.lastName + '<br>';
   document.getElementById('myDiv01').innerHTML += 'age: ' + myPerson.age + '<br>';
   document.getElementById('myDiv01').innerHTML += 'eyeColor: ' + myPerson.eyeColor + '<br>';
-}">
+)">
 <div id="myDiv01"></div>
 
