--- a/public/objects.html
+++ b/public/objects.html
@@ -16,7 +16,7 @@ let myPerson = {
 
 
 Nothing: <input type="text" id="myText01" value="Useless at the moment"><br>
-<input type="button" value="Example Object Set and Show" onclick="(
+<input type="button" value="Example Object Set and Show" onclick="{
   let myPerson = {
     'firstName': 'John',
     'lastName': 'Doe',
@@ -28,6 +28,6 @@ Nothing: <input type="text" id="myText01" value="Useless at the moment"><br>
   document.getElementById('myDiv01').innerHTML += 'lastName: ' + myPerson.lastName + '<br>';
   document.getElementById('myDiv01').innerHTML += 'age: ' + myPerson.age + '<br>';
   document.getElementById('myDiv01').innerHTML += 'eyeColor: ' + myPerson.eyeColor + '<br>';
-)">
+}">
 <div id="myDiv01"></div>
 
