--- a/public/objects.html
+++ b/public/objects.html
@@ -1,4 +1,4 @@
-<h2 align="center">objects-by-Manvir</h2>
+<h2 align="center">.Objects-by-Manvir</h2>
 <a href="">Good reference to Javascript Objects</a><br>
 Objects are stored named variables
 <h4> Example Objects code</h4>
@@ -18,16 +18,18 @@ let myPerson = {
 Nothing: <input type="text" id="myText01" value="Useless at the moment"><br>
 <input type="button" value="Example Object Set and Show" onclick="{
   let myPerson = {
-    'firstName': 'John',
-    'lastName': 'Doe',
-    'age': 50,
-    'eyeColor': 'blue'
+    'firstName': 'Michael',
+    'lastName': 'Jordan',
+    'age': 60,
+    'eyeColor': 'brown'
+    'netWorth' : 2 Billion'
   };
   document.getElementById('myDiv01').innerHTML = '<br>myPerson Object has properties:<br>';
   document.getElementById('myDiv01').innerHTML += 'firstName: ' + myPerson.firstName + '<br>';
   document.getElementById('myDiv01').innerHTML += 'lastName: ' + myPerson.lastName + '<br>';
   document.getElementById('myDiv01').innerHTML += 'age: ' + myPerson.age + '<br>';
   document.getElementById('myDiv01').innerHTML += 'eyeColor: ' + myPerson.eyeColor + '<br>';
+  document.getElementById('myDiv01').innerHTML += 'netWorth: + myPerson.netWorth + '<br>';
 }">
 <div id="myDiv01"></div>
 
