--- a/public/objects.html
+++ b/public/objects.html
@@ -21,15 +21,14 @@ Nothing: <input type="text" id="myText01" value="Useless at the moment"><br>
     'firstName': 'Michael',
     'lastName': 'Jordan',
     'age': 60,
-    'eyeColor': 'brown'
-    'netWorth' : 2 Billion'
+    'eyeColor': 'brown',
+    'netWorth': '2 Billion'
   };
   document.getElementById('myDiv01').innerHTML = '<br>myPerson Object has properties:<br>';
   document.getElementById('myDiv01').innerHTML += 'firstName: ' + myPerson.firstName + '<br>';
   document.getElementById('myDiv01').innerHTML += 'lastName: ' + myPerson.lastName + '<br>';
   document.getElementById('myDiv01').innerHTML += 'age: ' + myPerson.age + '<br>';
   document.getElementById('myDiv01').innerHTML += 'eyeColor: ' + myPerson.eyeColor + '<br>';
-  document.getElementById('myDiv01').innerHTML += 'netWorth: + myPerson.netWorth + '<br>';
+  document.getElementById('myDiv01').innerHTML += 'netWorth: ' + myPerson.netWorth + '<br>';
 }">
-<div id="myDiv01"></div>
 
