--- a/public/objects.html
+++ b/public/objects.html
@@ -32,3 +32,6 @@ Nothing: <input type="text" id="myText01" value="Useless at the moment"><br>
   document.getElementById('myDiv01').innerHTML += 'netWorth: ' + myPerson.netWorth + '<br>';
 }">
 
+
+body {background-color: powderblue;}
+
