--- a/public/objects.html
+++ b/public/objects.html
@@ -50,5 +50,5 @@ Store these Items in a Javascript object <br>
 <div id="myDiv128"></div><br><br>
 
 
-
+<body style="background-color:powderblue;">
 
