--- a/public/objects.html
+++ b/public/objects.html
@@ -16,22 +16,38 @@ let myPerson = {
 
 
 Nothing: <input type="text" id="myText01" value="Useless at the moment"><br>
+
 <input type="button" value="Example Object Set and Show" onclick="{
-  let myPerson = {
-    'firstName': 'Michael',
-    'lastName': 'Jordan',
-    'age': 60,
-    'eyeColor': 'brown',
-    'netWorth': '2 Billion'
-  };
-  document.getElementById('myDiv01').innerHTML = '<br>myPerson Object has properties:<br>';
-  document.getElementById('myDiv01').innerHTML += 'firstName: ' + myPerson.firstName + '<br>';
-  document.getElementById('myDiv01').innerHTML += 'lastName: ' + myPerson.lastName + '<br>';
-  document.getElementById('myDiv01').innerHTML += 'age: ' + myPerson.age + '<br>';
-  document.getElementById('myDiv01').innerHTML += 'eyeColor: ' + myPerson.eyeColor + '<br>';
-  document.getElementById('myDiv01').innerHTML += 'netWorth: ' + myPerson.netWorth + '<br>';
-}">
-<br><br><br><br><br>
+    let myPerson = {
+        'firstName': 'Michael',
+        'lastName': 'Jordan',
+        'age': 60,
+        'eyeColor': 'brown',
+        'netWorth': '2 Billion'
+    };
+    document.getElementById('myDiv01').innerHTML = '<br>myPerson Object has properties:<br>';
+    document.getElementById('myDiv01').innerHTML += 'firstName: ' + myPerson.firstName + '<br>';
+    document.getElementById('myDiv01').innerHTML += 'lastName: ' + myPerson.lastName + '<br>';
+    document.getElementById('myDiv01').innerHTML += 'age: ' + myPerson.age + '<br>';
+    document.getElementById('myDiv01').innerHTML += 'eyeColor: ' + myPerson.eyeColor + '<br>';
+    document.getElementById('myDiv01').innerHTML += 'netWorth: ' + myPerson.netWorth + '<br>';
+}"><br><br><br><br><br>
+
+Store these Items in a Javascript object<br>
+<textarea id="myTextAreaObject" rows="8" cols="70" wrap="false">{
+    "firstName": "Michael",
+    "lastName": "Jordan",
+    "age": 60,
+    "eyeColor": "Brown"
+}
+</textarea><br> 
+
+<input id="myButton128" type="button" value="Store as an object" onclick="{
+    var myPerson = JSON.parse(document.getElementById('myTextAreaObject').value);
+    document.getElementById('myDiv128').innerHTML = 'Name: ' + myPerson.firstName + ' ' + myPerson.lastName + ', Age: ' + myPerson.age + ', EyeColor: ' + myPerson.eyeColor + '<br>';
+}"><br><br>
+
+<div id="myDiv128"></div><br><br>
 
 Store these Items in a Javascript object <br>
 <textarea id="myTextAreaObject" rows="8" cols="70" wrap="false">{
