--- a/public/objects.html
+++ b/public/objects.html
@@ -39,6 +39,7 @@ Store these Items in a Javascript object<br>
     "lastName": "Jordan",
     "age": 60,
     "eyeColor": "Brown"
+    "netWorth": "2-Billion"
 }
 </textarea><br> 
 
