--- a/public/objects.html
+++ b/public/objects.html
@@ -1,4 +1,4 @@
-<h2 align="center">.Objects-by-Manvir</h2>
+<h2 align="center">Objects-by-Manvir</h2>
 <a href="">Good reference to Javascript Objects</a><br>
 Objects are stored named variables
 <h4> Example Objects code</h4>
