--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@ hi
   <li><a href="functions.html">functions.html</a>
   <li><a href="events.html">events.html</a>
   <li><a href="arrays.html">arrays.html</a>
-  <li><a href="edge-impulse.html">edge-impulse.html</a>
+  <li><a href="browser/edge-impulse.html">browser/edge-impulse.html</a>
+  <li><a href="browser/index.html">browser/index.html</a>
   <li><a href="objects.html">objects.html</a>
   <li><a href="huggingface.html">huggingface.html</a>
   <li><a href="..">...</a>
