--- a/public/11game.html
+++ b/public/11game.html
@@ -1,4 +1,4 @@
-<body id="myBody" style="background-repeat:repeat; background-size: 80%" background="myBackground01.jpg">
+<body id="myBody" style="background-repeat:repeat; background-size: 80%" background="https://media.istockphoto.com/id/627024026/zh/%E7%85%A7%E7%89%87/roadside-with-cityscape-background.jpg?s=612x612&w=0&k=20&c=3RJGDsZWMye6H-aNJtC2MZdJqWb72sEBI-rjy3zCmaw=">
 
 <h1 align=center><font color=red>T4A04 Maze by Fred</font></h1>
 
