--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,5 @@ hi
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="gam.html">gam.html</a>
-  <li><a href="game.html">game.html</a>
+  <li><a href="11game.html">game.html</a>
   
