--- a/public/11game.html
+++ b/public/11game.html
@@ -2,7 +2,8 @@
 
 <h1 align=center><font color=red>T4A04 Maze by Fred</font></h1>
 
-
+	<title>Game</title>
+	
 <script>
 
    // global variables here
