--- a/public/11game.html
+++ b/public/11game.html
@@ -112,3 +112,12 @@ function myCheckHit(){
 	
 	
 	
+
+	
+	
+	
+
+    // Update the position of the hands along with the background movement
+    let handLeft = parseInt(document.getElementById('myImg01').style.left) - 5 + 'px'
+    document.getElementById('myImg01').style.left = handLeft
+}, 100)
