--- a/public/11game.html
+++ b/public/11game.html
@@ -117,7 +117,14 @@ function myCheckHit(){
 	
 	
 
+    let myTempX = 0;
+clearInterval(myClock);
+myClock = setInterval(function() {
+    myTempX -= 5;
+    let myTemp = myTempX + 'px 0px';
+    document.getElementById('myBody').style.backgroundPosition = myTemp;
+
     // Update the position of the hands along with the background movement
-    let handLeft = parseInt(document.getElementById('myImg01').style.left) - 5 + 'px'
-    document.getElementById('myImg01').style.left = handLeft
-}, 100)
+    let handLeft = parseInt(document.getElementById('myImg01').style.left) - 5 + 'px';
+    document.getElementById('myImg01').style.left = handLeft;
+}, 100);
