--- a/public/11game.html
+++ b/public/11game.html
@@ -1,13 +1,12 @@
 <body id="myBody" style="background-repeat:repeat; background-size: 120%" background="https://e0.pxfuel.com/wallpapers/272/503/desktop-wallpaper-forest-fog-bw-trees-dark-dual-wide-background-black-fog.jpg">
 
-<h1 align=center><font color=red>T4A04 Maze by Fred</font></h1>
+<h1 align=center><font color=red>T4A04 Game by Fred</font></h1>
 
 	<title>Game</title>
 	
 <script>
 
    // global variables here
-   let myGlobalX = 0
    let myClock
 
 
