--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@ hi
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
-  <li><a href="..">...</a>
+  <li><a href="12gamee.html">12gamee.html</a>
   <li><a href="gam.html">gam.html</a>
   <li><a href="11game.html">game.html</a>
   
