--- a/public/working.html
+++ b/public/working.html
@@ -1,5 +1,5 @@
 
-<body id="myBody" style="background-repeat:repeat; background-size: 80%" background="myBackground01.jpg">
+<body id="myBody" style="background-repeat:repeat; background-size: 80%" background="https://e0.pxfuel.com/wallpapers/272/503/desktop-wallpaper-forest-fog-bw-trees-dark-dual-wide-background-black-fog.jpg">
 
 <h1 align=center><font color=red>T4A04 Maze by Fred</font></h1>
 
