--- a/public/11game.html
+++ b/public/11game.html
@@ -112,7 +112,7 @@ function myCheckHit(){
 	
 	
 	
-///////////////////////////////////////////////////sound//////////////////////////////////////////////////////////////////////
+//sound
 	<audio src="https://www.youtube.com/watch?v=L-zXH4M_6LI" controls>
 
 </audio>
