--- a/public/11game.html
+++ b/public/11game.html
@@ -113,9 +113,9 @@ function myCheckHit(){
 	
 	
 //sound
-	<audio src="https://www.youtube.com/watch?v=L-zXH4M_6LI" controls>
-
+<audio controls autoplay loop>
+  <source src="path_to_your_audio_file.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
 </audio>
-	
-	
+
 	
