--- a/public/11game.html
+++ b/public/11game.html
@@ -114,7 +114,7 @@ function myCheckHit(){
 	
 //sound
 <audio controls autoplay loop>
-  <source src="path_to_your_audio_file.mp3" type="audio/mpeg">
+  <source src="Creepy Little Girl Talking, Singing, Laughing, Humming (HD) (FREE).mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
