--- a/public/11game.html
+++ b/public/11game.html
@@ -112,8 +112,8 @@ function myCheckHit(){
 	
 	
 	
-//sound
-<audio controls autoplay loop>
+
+<audio autoplay loop>
   <source src="Creepy Little Girl Talking, Singing, Laughing, Humming (HD) (FREE).mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
