--- a/public/11game.html
+++ b/public/11game.html
@@ -189,3 +189,98 @@ updatePosition();
 </body>
 
 
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	//checks hit and sends to start
+	
+	
+	<script>
+		// Set the initial position and velocity variables
+let positionY = 190;
+let positionX = 50;
+let velocityY = 0;
+const velocityX = 2; // Horizontal velocity
+
+// Define the gravity force (lower value for slower falling)
+const gravity = 0.2;
+// Define the jump force
+const jumpForce = -6;
+
+// Add event listener to detect clicks
+document.addEventListener('click', function () {
+  velocityY = jumpForce; // Apply jump force to the vertical velocity
+  positionX += velocityX; // Update the horizontal position
+});
+
+// Define the function to update the image position
+function updatePosition() {
+  // Apply gravity to the vertical velocity
+  velocityY += gravity;
+
+  // Update the position based on the velocities
+  positionY += velocityY;
+  positionX += velocityX;
+
+  // Set the new position of the image
+  const pigElement = document.getElementById("myImg01");
+  pigElement.style.top = positionY + "px";
+  pigElement.style.left = positionX + "px";
+
+  // Check for collisions with hands
+  myCheckHit();
+
+  // Request the next animation frame
+  requestAnimationFrame(updatePosition);
+}
+
+// Function to check for collisions with hands
+function myCheckHit() {
+  const pigElement = document.getElementById("myImg01");
+  const pigRect = pigElement.getBoundingClientRect();
+
+  const hands = document.getElementsByClassName("hand");
+  for (let i = 0; i < hands.length; i++) {
+    const handRect = hands[i].getBoundingClientRect();
+    if (
+      pigRect.right >= handRect.left &&
+      pigRect.bottom >= handRect.top &&
+      pigRect.left <= handRect.right &&
+      pigRect.top <= handRect.bottom
+    ) {
+      // Collision detected, reset pig position
+      positionY = 190;
+      positionX = 50;
+      pigElement.style.top = positionY + "px";
+      pigElement.style.left = positionX + "px";
+      break;
+    }
+  }
+}
+
+// Call the updatePosition function to start the animation
+updatePosition();
+	</script>
