--- a/public/11game.html
+++ b/public/11game.html
@@ -31,14 +31,23 @@ function myHitOther(my1,my2){
 
 
 
-  function myCheckHit() {
-  if (myHitOther('myImg01', 'myImg02') || myHitOther('myImg01', 'myImg03') || myHitOther('myImg01', 'myImg04')) {
-    const pigElement = document.getElementById('myImg01');
-    pigElement.style.left = '50px';
-    pigElement.style.top = '190px';
-  }
-}
+ function myCheckHit(){
 
+   if ( myHitOther('myImg01','myImg02') ){
+       //alert('you lose')
+      document.getElementById('myImg01').style.left = '20px'
+   }   
+   
+   if ( myHitOther('myImg01','myImg03') ){
+       //alert('you lose')
+      document.getElementById('myImg01').style.left = '20px'
+   }   
+	
+   
+ if ( myHitOther('myImg01','myImg04') ){
+       //alert('you lose')
+      document.getElementById('myImg01').style.left = '20px'
+   }   
 
    // YOU WIN and go to next level!
 
