--- a/public/11game.html
+++ b/public/11game.html
@@ -1,6 +1,6 @@
 <body id="myBody" style="background-repeat:repeat; background-size: 120%" background="https://e0.pxfuel.com/wallpapers/272/503/desktop-wallpaper-forest-fog-bw-trees-dark-dual-wide-background-black-fog.jpg">
 
-<h1 align=center><font color=red>T4A04 Game by Fred</font></h1>
+<h1 align=center><font color=red>T4A04 Game by Manvir</font></h1>
 
 	<title>Game</title>
 	
@@ -272,3 +272,39 @@ function updatePosition() {
 // Call the updatePosition function to start the animation
 updatePosition();
 	</script>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	function myCheckHit() {
+  if (myHitOther('myImg01', 'myImg02')) {
+    alert('You lose');
+    document.getElementById('myImg01').style.left = '20px';
+  }
+
+  if (myHitOther('myImg01', 'myImg03')) {
+    alert('You lose');
+    document.getElementById('myImg01').style.left = '20px';
+  }
+
+  if (myHitOther('myImg01', 'myImg04')) {
+    alert('You lose');
+    document.getElementById('myImg01').style.left = '20px';
+  }
+
+  // YOU WIN and go to the next level!
+  if (myHitOther('myImg01', 'myImg05')) {
+    alert('You Win, now go to the next level');
+    document.getElementById('myImg01').style.left = '20px';
+    location = 'https://www.google.ca';
+  }
+}
+
