--- a/public/11game.html
+++ b/public/11game.html
@@ -175,7 +175,7 @@ function updatePosition() {
   // Set the new position of the image
   document.getElementById("myImg01").style.top = positionY + "px";
   document.getElementById("myImg01").style.left = positionX + "px";
-
+  myCheckHit()
   // Request the next animation frame
   requestAnimationFrame(updatePosition);
 }
