--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,6 @@ hi
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
-  <li><a href="..">...</a>
+  <li><a href="backup01.html">backup</a>
   <li><a href="11game.html">game.html</a>
   
