--- a/public/11game.html
+++ b/public/11game.html
@@ -1,8 +1,4 @@
-<body id="myBody" style="background-repeat:repeat; background-size: 120%" background="https://e0.pxfuel.com/wallpapers/272/503/desktop-wallpaper-forest-fog-bw-trees-dark-dual-wide-background-black-fog.jpg"  onLoad="{
-  velocityY = jumpForce; // Apply jump force to the vertical velocity
-  positionX += velocityX; // Update the horizontal position
-
-}">
+<body id="myBody" style="background-repeat:repeat; background-size: 120%" background="https://e0.pxfuel.com/wallpapers/272/503/desktop-wallpaper-forest-fog-bw-trees-dark-dual-wide-background-black-fog.jpg" >
 
 <h1 align=center><font color=red>T4A04 Game by Manvir</font></h1>
 
@@ -28,13 +24,14 @@ var gravity = 0.2;
 var jumpForce = -6;
 
 	
-	/*
+	
 // Add event listener to detect clicks
 document.addEventListener('click', function() {
   velocityY = jumpForce; // Apply jump force to the vertical velocity
   positionX += velocityX; // Update the horizontal position
+	alert()
 });
-*/
+
 
 // Define the function to update the image position
 function updatePosition() {
