--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@ hi
   <li><a href="objects.html">objects.html</a>
   <li><a href="huggingface.html">huggingface.html</a>
   <li><a href="..">...</a>
-  <li><a href="..">...</a>
+  <li><a href="gamelvl1.html">game level 1</a>
   <li><a href="11backup">11backup</a>
   <li><a href="backup01.html">backup</a>
   <li><a href="11game.html">game.html</a>
