--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@ hi
   <li><a href="huggingface.html">huggingface.html</a>
   <li><a href="..">...</a>
   <li><a href="11gamelvl1.html">game level 1</a>
-  <li><a href="11backup">11backup</a>
-  <li><a href="backup01.html">backup</a>
-  <li><a href="11game.html">game.html</a>
+  <li><a href="level2.html">game level 2</a>
+  <li><a href="...">...</a>
+  <li><a href="...">...</a>
   
