--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@ hi
   <h3 The following only need the exact file name</h3>
   <li><a href="T1A02-basic-web-page.html">t3a01-basic-web-page-Manvir.html</a>
   
-   <li><a href="2site.html">SITG</a>
+   <li><a href="2site.html">OGSITG</a>
+     <li><a href="3site.html">SITG</a>
   <li><a href="T3A03-lists-and-tables-by-Manvir.html">T3A03-lists-and-tables-by-Manvir.html</a>
   <li><a href="T3AR-Manvir.html">T3AR-Manvir.html</a>
   <li><a href="t3a03-forms-Manvir.html">t3a03-forms-Manvir.html</a>
